feat: add vibe coded tests (session 17)